@@ -1,0 +1,6 @@
+# This should fail
+
+i : limited integer; -- should not be possible
+i : limited integer := 5;
+? i;
+
