@@ -1,0 +1,6 @@
+# This should fail
+
+i : integer; -- should not be possible
+i : integer := 5;
+? i;
+
