@@ -1,0 +1,7 @@
+# This should fail
+
+i : constant integer;
+? i; -- should not be possible
+i : constant integer := 5;
+? i;
+
