@@ -1,0 +1,6 @@
+type rt is record
+  i : integer;
+end record;
+r : rt;
+r : rt := (1); -- this should fail
+? r.i;
