@@ -71,3 +71,5 @@ support.
 
 32. [Fedja B] If Git exists, configure will use Git to create the build version string attached to the development command prompt.  Otherwise, the current date is used as before.
 
+33. Fix: ? x where x does not exist no longer raises an exception.
+
